...
import androidx.navigation.compose.rememberNavController
import com.wgeplant.R
import com.wgeplant.ui.theme.WGeplantTheme

object StartScreenConstants {
    const val DESCRIPTION_LOGO = "WGeplant Logo"
    const val BUTTON_LOGIN = "Anmelden"
    const val BUTTON_REGISTER = "Registrieren"
    const val APP_TITLE_PART1 = "WG"
    const val APP_TITLE_PART2 = "eplant"
}

/**
 * Composable function to display the start screen with Login and Register options.
...
